--- a/res/layout/checkpointchooser.xml
+++ b/res/layout/checkpointchooser.xml
@@ -4,22 +4,39 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:map="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/map"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:name="com.google.android.gms.maps.MapFragment"
-            />
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Undo Point"
-            android:id="@+id/button" android:layout_gravity="left|bottom" android:onClick="undoButton"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create Race"
-            android:id="@+id/button2" android:layout_gravity="right|bottom" android:onClick="createButton"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent" android:layout_gravity="center_horizontal|bottom">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Undo Point"
+                    android:id="@+id/button" android:layout_gravity="left" android:onClick="undoButton"
+                    />
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+                <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Create Race"
+                        android:id="@+id/button2" android:onClick="createButton" android:layout_gravity="right"
+                        android:layout_row="1" android:layout_column="8"/>
+            </LinearLayout>
+        </LinearLayout>
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:map="http://schemas.android.com/apk/res-auto"
+                  android:id="@+id/map"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:name="com.google.android.gms.maps.MapFragment"
+                />
+    </LinearLayout>
 
 </FrameLayout>
