--- a/res/layout/fragment_joinableraces.xml
+++ b/res/layout/fragment_joinableraces.xml
@@ -17,6 +17,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/searchText" android:layout_weight="1"/>
+        <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/searchButton" android:background="@drawable/ic_action_search"/>
     </LinearLayout>
     <ListView
             android:layout_width="wrap_content"
