--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Remember Me"
-            android:id="@+id/checkBox" android:checked="false" android:layout_marginLeft="15dp"/>
+            android:id="@+id/rememberBox" android:checked="false" android:layout_marginLeft="15dp"/>
     <Button
             android:layout_width="125dp"
             android:layout_height="wrap_content"
