--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/passwordText" android:layout_weight="1" android:layout_marginRight="15dp"/>
+                android:id="@+id/passwordTextField" android:layout_weight="1" android:layout_marginRight="15dp"/>
     </LinearLayout>
     <CheckBox
             android:layout_width="wrap_content"
@@ -70,6 +70,7 @@
             android:layout_width="125dp"
             android:layout_height="wrap_content"
             android:text="Sign-Up"
-            android:id="@+id/signupButton" android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"/>
+            android:id="@+id/signupButton" android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"
+            android:onClick="signupClick"/>
 </LinearLayout>
 
