--- a/res/menu/racerview_activity_actions.xml
+++ b/res/menu/racerview_activity_actions.xml
@@ -12,4 +12,7 @@
     <item android:id="@+id/action_leave"
           android:title="@string/leave_race"
           android:showAsAction="never" />
+    <item android:id="@+id/action_delete"
+          android:title="@string/delete_race"
+          android:showAsAction="never" />
 </menu>
